# potato

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  justfile  renovate.json
.github/workflows/: cargo-audit.yml  ci.yml  release-plz.yml
crates/potato-cli/: Cargo.toml
crates/potato-cli/src/: main.rs
crates/potato-client/: Cargo.toml  tauri.conf.json
crates/potato-client/frontend/: index.html
crates/potato-client/src/: lib.rs  main.rs
crates/potato-gui/: Cargo.toml  package.json  pnpm-lock.yaml
crates/potato-gui/frontend/: package.json  pnpm-lock.yaml  potato-polyfill.js  vite.config.ts
crates/potato-gui/src/: main.rs
crates/potato-server/: Cargo.toml
crates/potato-transport/: Cargo.toml
crates/potato-transport/src/: lib.rs  socket.rs  sse.rs
crates/spud-app-chromium/: Cargo.toml
crates/spudkit/: CHANGELOG.md  Cargo.toml
crates/spudkit-cli/: CHANGELOG.md  Cargo.toml
crates/spudkit-client/: CHANGELOG.md  Cargo.toml
crates/spudkit-client/src/: lib.rs
crates/spudkit-core/: Cargo.toml
crates/spudkit-gui/: CHANGELOG.md  Cargo.toml  package.json  pnpm-lock.yaml
crates/spudkit-transport/: CHANGELOG.md  Cargo.toml
e2e/: package.json  pnpm-lock.yaml  tsconfig.json  wdio.book-search.conf.ts  wdio.conf.ts
e2e/specs/: app-loads.ts  book-search.ts
images/base/: Dockerfile  dispatch
images/book-search/: Dockerfile  index.html  search.html
images/hello-simple/: Dockerfile  chat.sh  echo.sh  index.html
images/hello-world/: Dockerfile  calculate.sh  index.html
src/: lib.rs  main.rs
tests/: integration_test.rs
(+49 files in other folders)
