[package]
name = "potato-transport"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde_json = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt"] }
