[package]
name = "spudkit-client"
version = "0.1.0"
edition = "2024"
description = "Client library for communicating with the spudkit server"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
spudkit-transport = { path = "../spudkit-transport" }
anyhow = "=1.0.102"
serde_json = "=1.0.149"
